[package]
name = "rust_json_api"
version = "0.1.0"
authors = ["Andreas Eberli <andreas@eberli.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
mysql = "17.0.0"
serde_json = "*"
serde = { version = "*", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]